Bug 1356881 - find mailinglists (groups) also in OS X and Outlook addressbooks. r=Paenglab, r=jorgk